[fix] Fixed style bugs introduce by recent changes (#51)
Fixed bugs:
- Navbar didn't hide some card elements (see screenshot)
- Document was wider than the page, which introduced horisontal scroll
- Navbar was partially hiding [upload files] dialog modal window

Done:
- Increase z-index of navbar
- Restricted body x-overflow and disabled horizontal scroll
- Centered vertically [upload files] dialog window
- Deleted few dead elements

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
   color: white;
 }
 
-.entire_doc {
+.app_content {
   padding: 0;
   margin: auto;
+  width: 100%;
 }
